--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,47 +1,15 @@
 @import "reset.css";
-@import "/Users/kto_rlo/Documents/GitHub/clone/CSS/status-bar.css";
-@import "/Users/kto_rlo/Documents/GitHub/clone/CSS/variables.css";
+/* reset.css */
 
+@import "/Users/kto_rlo/Documents/GitHub/clone/CSS/components/status-bar.css";
+/* components/status.bar.css */
+
+@import "/Users/kto_rlo/Documents/GitHub/clone/CSS/variables.css";
+/* variables.css */
+
+@import "/Users/kto_rlo/Documents/GitHub/clone/CSS/screens/login.css";
+/* screen/log in */
 
 body{
 font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.welcome-header{
-    margin:90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.welcome-header__title{
-    margin-bottom: 20px;
-    font-size:25px;
-}
-.welcome-header__text{
-    width:60%;
-    opacity: 0.7;
-}
-#login-form{
-    display:flex;
-    flex-direction: column;
-    margin:0px 30px;
-}
-#login-form input{
-    border: none;
-    padding:15px 0px;
-    font-size:18px;
-    border-bottom:1px solid rgba(0,0,0,0.2);
-    margin-bottom: 25px;
-    transition: border-color 0.3s ease-in-out;
-}
-#login-form input:not([type="submit"]) {
-    border-bottom: none;
-}
-
-#login-form input::placeholder{
-    color:rgba(0,0,0,0.4);
-}
-
-#login-form input:focus{
-    border-color: var(--yellow);
 }
