--- a/CSS/screens/components/status-bar.css
+++ b/CSS/screens/components/status-bar.css
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: center;
     padding:5px 3px;
+    position:sticky;
+    width:100%;
+    top:0 ;
 }
 .status-bar_column{
     width:33%;
