--- a/CSS/screens/components/screen-header.css
+++ b/CSS/screens/components/screen-header.css
@@ -1,8 +1,9 @@
 .screen-header {
     display:flex;
     justify-content: space-between;
-    padding:25px;
     align-items: center;
+    padding: var(--horizontal-space);
+    margin-bottom: 15px;
 }
 
 .screen-header__title {
@@ -14,4 +15,5 @@
 .screen-header__icons span {
     margin-left:25px;
 }
+
 
