--- a/CSS/screens/styles.css
+++ b/CSS/screens/styles.css
@@ -11,14 +11,25 @@
 /* screen/log in */
 
 @import "./components/nav-bar.css";
+
 /* nav-bar.css */
+
+@import "./components/user-component.css";
+/* user-components */
 
 @import "./components/screen-header.css";
 /* screen-header */
 
 @import "./components/friends.css";
 /* friends. */
+
+@import "./components/badge.css";
+
 body{
 font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 color: #2e363e;
+}
+
+.main-screen{
+    padding:0px var(--horizontal-space);
 }
