--- a/CSS/screens/styles.css
+++ b/CSS/screens/styles.css
@@ -24,6 +24,11 @@
 /* friends. */
 
 @import "./components/badge.css";
+/* badge */
+
+@import "./components/find.css";
+
+@import "./components/point.css";
 
 body{
 font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
